--- a/GWC Website/main_page.css
+++ b/GWC Website/main_page.css
@@ -89,3 +89,16 @@ mark {
   .demo:hover {
     opacity: 1;
   }
+
+  .footer{
+    text-align: center;
+  }
+
+  .fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+  }
