fixes on meetus page and started project page

--- a/GWC Website/meet_us.css
+++ b/GWC Website/meet_us.css
@@ -49,3 +49,16 @@
     border-radius: 50%;
     display: inline-block;
   }
+
+  .footer{
+    text-align: center;
+  }
+
+  .fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+  }
