Removed older main page
Cleaned up some unused files, added notes to css changes

--- a/GWC_Website/main_scroll.css
+++ b/GWC_Website/main_scroll.css
@@ -45,6 +45,7 @@
   top: 0;
   left: 0;
   height: 100%;
+  /* Hey browser, use your GPU */
   transform: translate3d(0, 0, 0);
 }
 .tech-slideshow .mover-1 {
