--- a/GWC_Website/project.css
+++ b/GWC_Website/project.css
@@ -34,7 +34,7 @@ body {
     position: relative;
     margin: 0 auto;
     padding: 1em 0 4em;
-    max-width: 1000px;
+    max-width: 1600px;
     list-style: none;
     text-align: center;
   }
@@ -49,8 +49,8 @@ body {
     max-width: 480px;
     max-height: 360px;
     width: 48%;
+    transform: scale(.8);
     background: #3085a3;
-    text-align: center;
     cursor: pointer;
   }
   
@@ -141,6 +141,7 @@ body {
   figure.effect-lily p {
     -webkit-transform: translate3d(0,40px,0);
     transform: translate3d(0,40px,0);
+    text-align: left;
   }
   
   figure.effect-lily h2 {
